// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Typography > snapshots > body variant with defaults matches snapshot 1`] = `
<div>
  <p
    class="antialiased font-inter text-base font-normal text-pca-grey-900 dark:text-pca-white dark:text-white"
  >
    Body Default Snapshot
  </p>
</div>
`;

exports[`Typography > snapshots > bodySmall variant matches snapshot 1`] = `
<div>
  <p
    class="antialiased font-inter text-sm font-normal text-pca-grey-900 dark:text-pca-white dark:text-white"
  >
    Body Small Snapshot
  </p>
</div>
`;

exports[`Typography > snapshots > fully customized typography matches snapshot 1`] = `
<div>
  <h2
    class="antialiased font-inter text-xl sm:text-2xl text-pca-blue-500 dark:text-pca-grey-100 text-center font-semibold uppercase mb-8"
  >
    Fully Customized
  </h2>
</div>
`;

exports[`Typography > snapshots > heading1 variant matches snapshot 1`] = `
<div>
  <h1
    class="antialiased font-inter text-[28px] sm:text-4xl font-bold text-pca-grey-900 dark:text-pca-white dark:text-white"
  >
    Heading 1 Snapshot
  </h1>
</div>
`;

exports[`Typography > snapshots > polymorphic as label matches snapshot 1`] = `
<div>
  <label
    class="antialiased font-inter text-base text-pca-grey-600 dark:text-white font-semibold"
    for="email"
  >
    Email Label
  </label>
</div>
`;

exports[`Typography > snapshots > title variant matches snapshot 1`] = `
<div>
  <h1
    class="antialiased font-inter text-5xl font-bold text-pca-grey-900 dark:text-pca-white dark:text-white"
  >
    Title Snapshot
  </h1>
</div>
`;
